@@ -1,3 +1,9 @@
+QXmpp 0.x.y (UNRELEASED)
+------------------------
+
+ - Removed deprecated  "get*" getter accessors from:
+   QXmppStanza
+
 QXmpp 0.3.0 (Mar 05, 2011)
 ------------------------
   - New XEPs
